🐛 (NavBar & SideBar): Fix z-indexes

--- a/components/NavBar/NavBar.module.scss
+++ b/components/NavBar/NavBar.module.scss
@@ -13,7 +13,7 @@ $primaryColour: #9e1030;
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9000;
+    z-index: 8000;
   }
 
   &.flat {
